<resources>
    <string name="app_name">Календарь эмоций</string>

    <string name="events_label">Задания</string>
    <string name="profile_label">Профиль</string>
    <string name="navigate_back">Вернуться назад</string>

    // events
    <string name="complete_any_task">Выполни любое задание</string>
    <string name="customize_tasks">Настроить под себя</string>
    <string name="few_minutes">Пару минут</string>
    <string name="until_hour">До часа</string>
    <string name="more_hour">Больше часа</string>
    <string name="one_day_long">Один день</string>
    <string name="quest_of_the_day">Квест дня</string>
    <string name="task_completed">Задание выполнено</string>
    <string name="not_like_task">Задание не нравится</string>
    <string name="show_task_later">Покажите задание позже</string>
    <string name="event_money">до %s BYN</string>
    <string name="error">Произошла ошибка. Попробуйте еще раз</string>
    <string name="empty_events_text">Задания на сегодня закончились. Возвращайтесь завтра</string>
    <string name="later_text">Заданиe будет показано позже</string>
    <string name="not_like_text">Удалили задание из Ваших рекомендаций</string>
    <string name="done_text">Продолжайте в том же духе!</string>
    <string name="all_done_text">На сегодня все. Приходите завтра!</string>

    // profile
    <string name="profile">Профиль</string>
    <string name="your_id">Ваш ID</string>
    <string name="is_adult">Вам есть 18 лет?</string>
    <string name="personality_type">Тип личности</string>
    <string name="introvert">Интроверт</string>
    <string name="extravert">Экстраверт</string>
    <string name="sex">Пол</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="logout">Выйти</string>
    <string name="enter_id">Введите свой ID</string>
    <string name="or_text">либо</string>
    <string name="register_text">зарегистрируйтесь</string>
    <string name="id_hint">132</string>
    <string name="login">Войти</string>
    <string name="save">Сохранить</string>
    <string name="register_success">Вы зарегистрированы</string>
    <string name="fill_success">Данные заполнены. Спасибо!</string>
    <string name="input_error">Ошибка ввода: id должен состоять только из чисел</string>
    <string name="personality_input_error">Заполните, пожалуйста, тип личности</string>
    <string name="sex_input_error">Заполните, пожалуйста, пол</string>
</resources>