<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp">

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="divider1, divider2, divider3, tvUserIdTitle, tvUserId, switchAdult, tvPersonalityTitle, rgPersonality, tvSexTitle, rgSex, tvLogout" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="tvEnterIdTitle, etEnterId, tvReg, btnLogin" />

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/navigate_back"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/profile"
            android:textColor="@color/purpleColor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/ivBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivBack"
            app:layout_constraintTop_toTopOf="@id/ivBack" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/dividerColor"
            app:layout_constraintTop_toBottomOf="@id/ivBack" />

        <TextView
            android:id="@+id/tvUserIdTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:paddingVertical="24dp"
            android:paddingStart="16dp"
            android:text="@string/your_id"
            android:textColor="@color/purpleColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tvUserId"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <TextView
            android:id="@+id/tvUserId"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:paddingEnd="16dp"
            android:textColor="@color/purpleColor70"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/tvUserIdTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvUserIdTitle" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"
            app:layout_constraintTop_toBottomOf="@id/tvUserIdTitle" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchAdult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="24dp"
            android:text="@string/is_adult"
            android:textColor="@color/purpleColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dividerColor"
            app:layout_constraintTop_toBottomOf="@id/switchAdult" />

        <TextView
            android:id="@+id/tvPersonalityTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:text="@string/personality_type"
            android:textColor="@color/purpleColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

        <RadioGroup
            android:id="@+id/rgPersonality"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/tvPersonalityTitle"
            app:layout_constraintStart_toStartOf="@id/tvPersonalityTitle"
            app:layout_constraintTop_toBottomOf="@id/tvPersonalityTitle">

            <RadioButton
                android:id="@+id/rbExtravert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/purpleColor"
                android:text="@string/extravert"
                android:textColor="@color/purpleColor"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbIntrovert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:buttonTint="@color/purpleColor"
                android:text="@string/introvert"
                android:textColor="@color/purpleColor"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RadioGroup>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/dividerColor"
            app:layout_constraintTop_toBottomOf="@id/rgPersonality" />

        <TextView
            android:id="@+id/tvSexTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:text="@string/sex"
            android:textColor="@color/purpleColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/divider3" />

        <RadioGroup
            android:id="@+id/rgSex"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/tvSexTitle"
            app:layout_constraintStart_toStartOf="@id/tvSexTitle"
            app:layout_constraintTop_toBottomOf="@id/tvSexTitle">

            <RadioButton
                android:id="@+id/rbFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/purpleColor"
                android:text="@string/female"
                android:textColor="@color/purpleColor"
                android:textSize="14sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rbMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:buttonTint="@color/purpleColor"
                android:text="@string/male"
                android:textColor="@color/purpleColor"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/purpleColor"
            android:paddingVertical="12dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:visibility="gone"
            app:cornerRadius="32dp"
            app:layout_constraintTop_toBottomOf="@id/rgSex" />

        <View
            android:id="@+id/viewFilled"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/rgSex"
            app:layout_constraintTop_toBottomOf="@id/ivBack" />

        <TextView
            android:id="@+id/tvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center_vertical"
            android:text="@string/logout"
            android:textColor="@color/gray50"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <TextView
            android:id="@+id/tvEnterIdTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_id"
            android:textColor="@color/purpleColor"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/guideline" />

        <EditText
            android:id="@+id/etEnterId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_rounded_frame_complete"
            android:gravity="center"
            android:hint="@string/id_hint"
            android:inputType="number"
            android:paddingVertical="16dp"
            android:textColor="@color/purpleColor70"
            android:textColorHint="@color/purpleColor50"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tvEnterIdTitle" />

        <TextView
            android:id="@+id/tvReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/or_register"
            android:textColor="@color/gray50"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/etEnterId" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/selector_button_color"
            android:enabled="false"
            android:paddingVertical="12dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="32dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/purpleColor"
            android:indeterminateTintMode="src_atop" />
    </FrameLayout>
</FrameLayout>