<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/event_background_color"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvEvent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@id/ivComplete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivComplete"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvDayQuest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:background="@drawable/bg_rounded_frame"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:text="@string/quest_of_the_day"
                android:textColor="@color/white30"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:background="@drawable/bg_rounded_frame"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:text="@string/quest_of_the_day"
                android:textColor="@color/white30"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:background="@drawable/bg_rounded_frame"
                android:paddingHorizontal="12dp"
                android:paddingVertical="4dp"
                android:text="@string/quest_of_the_day"
                android:textColor="@color/white30"
                android:textSize="12sp"
                android:visibility="gone" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivComplete"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/task_completed"
            android:src="@drawable/ic_complete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivNotLike"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/not_like_task"
            android:src="@drawable/ic_not_like"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivComplete" />

        <ImageView
            android:id="@+id/ivLater"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/not_like_task"
            android:src="@drawable/ic_later"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivNotLike" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>